--- a/shows.html
+++ b/shows.html
@@ -250,6 +250,46 @@
             </div>
         </div>
     </section>
+    <!-- about us section start -->
+    <div class="blog_detail">
+        <div class="container">
+            <div class="row mb-4 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="blog_img">
+                        <a href="event.html"><img src="img/macauhistroy.jpg" alt="macau"></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="blog_box">
+                        <a href="event.html"><h2>Exploring the Rich History of Macau: A Journey Through Time
+                        </h2></a>
+                        <p>Macau's history is a captivating blend of East and West, shaped by centuries of cultural
+                            exchange and colonial influence. As you stroll through its streets, you encounter a rich
+                            tapestry of historical landmarks that tell the story of this unique city.
+                        </p>
+                        <p>Macau’s story begins with its indigenous people and early Portuguese explorers. The city
+                            was officially ceded to Portugal in 1557, establishing a European presence that lasted over
+                            400 years. During this time, Macau became a pivotal trade hub between Europe and Asia,
+                            which is reflected in its eclectic architecture and diverse heritage.
+
+                        </p>
+                        <p>Key historical sites include the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
+                            past,
+                            and the A-Ma Temple, dedicated to the sea goddess A-Ma, showcasing the city's
+                            deep-rooted spiritual traditions. Explore the Senado Square, with its charming Portuguese
+                            tiles and colonial buildings, and visit the Macau Museum to learn more about the city’s
+                            multifaceted history.
+                        </p>
+                        <p>Macau’s history is a testament to its role as a cultural crossroads. By exploring its
+                            historical
+                            landmarks, you gain insight into the city's unique heritage and its evolution over the
+                            centuries.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- about us section end -->
     <!-- accordian section start -->
     <div class="hotel_accordian">
         <div class="container">
