--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <li>
                             <a href="sport.html">Sports</a>
                         </li>
+                        <li><a href="tour.html">Tour</a></li>
                         <li>
                             <a href="event.html">Events</a>
                         </li>
@@ -299,7 +300,7 @@
     </div>
     <!-- below section end -->
     <!--footer start-->
-    <!-- <footer class="footer_section">
+    <footer class="footer_section">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -309,27 +310,39 @@
                 </div>
                 <div class="col-12">
                     <div class="footer_inner">
-                        <h3>RÝCHLE ODKAZY</h3>
+                        <h3>QUICK LINKS</h3>
                         <ul>
                             <li>
-                                <a href="hotel.html">
-                                    hotely</a>
+                                <a href="exhibitions.html">
+                                    Exhibitions</a>
                             </li>
                             <li>
-                                <a href="resorts.html">
-                                    Strediská</a>
+                                <a href="shows.html">
+                                    Shows</a>
                             </li>
                             <li>
-                                <a href="spa.html">Kúpele</a>
+                                <a href="hotel.html">Hotels</a>
                             </li>
                             <li>
-                                <a href="about.html">O nás</a>
+                                <a href="sport.html">Sports</a>
+                            </li>
+                            <li><a href="tour.html">Tour</a></li>
+                            <li>
+                                <a href="event.html">Events</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="footer_inner">
+                        <ul>
+                            <li>
+                                <a href="privacy.html">
+                                    Privacy Policy</a>
                             </li>
                             <li>
-                                <a href="privacy.html">Zásady ochrany osobných údajov</a>
-                            </li>
-                            <li>
-                                <a href="terms.html">Podmienky</a>
+                                <a href="terms.html">
+                                    Terms & Conditions</a>
                             </li>
                         </ul>
                     </div>
@@ -347,12 +360,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <p class="copyright">Copyright © 2024 <a href="#">Slovak</a>.</p>
+                <div class="col-12 copyright_sec">
+                    <p class="copyright">Copyright © 2024 <a href="index.html">ticketsmacau</a>.</p>
+                    <p>Contact us <a href="mailto:info@ticketsmacau.com">info@ticketsmacau.com</a></p>
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- footer end-->
     <!-- cookies start -->
     <!-- <div class="card cookie-alert show">
