--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="footer_inner">
+                    <div class="footer_inner mt-3">
                         <ul>
                             <li>
                                 <a href="privacy.html">
