--- a/tour.html
+++ b/tour.html
@@ -47,7 +47,7 @@
     </header>
     <!-- header section start -->
     <!-- banner section start -->
-    <div class="shows_banner">
+    <div class="tour_banner">
         <div class="container">
             <div class="row">
                 <div class="col-12">
