--- a/tour.html
+++ b/tour.html
@@ -94,7 +94,7 @@
 
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/gertiage.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.wh.mo/en/site/detail/18">
                                 <h3>Ruins of St. Paul's</h3>
                                 <span>📍 Historic Centre of Macau</span>
@@ -105,14 +105,13 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wh.mo/en/site/detail/18" class="button_main">Buy Tickets
-                                CTA</a>
+                            <a href="https://www.wh.mo/en/site/detail/18" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/viator.jpg" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446">
                                 <h3>Senado Square
@@ -132,7 +131,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/klook.webp" alt="macao"></div>
                         <div class="together"> <a
                                 href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB">
                                 <h3>Macau Tower</h3>
