--- a/tour.html
+++ b/tour.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -145,13 +145,13 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB"
-                                class="button_main">Buy Tickets CTA</a>
+                                class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/temple.jpg" alt="macao"></div>
                         <div class="together"> <a
                                 href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450">
                                 <h3>A-Ma Temple</h3>
@@ -164,7 +164,7 @@
                         <div class="hotel_btn">
                             <a href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450"
                                 class="button_main">Buy
-                                Tickets CTA</a>
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -181,8 +181,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.museums.gov.mo/eng/museums.html" class="button_main">Buy Tickets
-                                CTA</a>
+                            <a href="https://www.museums.gov.mo/eng/museums.html" class="button_main">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
