--- a/tour.html
+++ b/tour.html
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/museum.jpg" alt="macao"></div>
                         <div class="together"> <a href="https://www.museums.gov.mo/eng/museums.html">
                                 <h3>Macau Museum</h3>
                                 <span>📍 Historic Centre of Macau</span>
