--- a/tour.html
+++ b/tour.html
@@ -187,7 +187,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/village.avif" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village">
                                 <h3>Coloane Village</h3>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/taipavillage.jpg" alt="macau"></div>
                         <div class="together"> <a href="https://www.china-roads.com/travel/macao/village-taipa/">
                                 <h3>Taipa Village
                                 </h3>
