--- a/tour.html
+++ b/tour.html
@@ -228,7 +228,7 @@
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="img_transition"><img src="img/panda.avif" alt="macau"></div>
                         <div class="together"> <a
                                 href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion">
                                 <h3>Macau Giant Panda Pavilion
