--- a/tour.html
+++ b/tour.html
@@ -201,7 +201,7 @@
                         <div class="hotel_btn">
                             <a href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village"
                                 class="button_main">Buy
-                                Tickets CTA</a>
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.china-roads.com/travel/macao/village-taipa/" class="button_main">Buy
-                                Tickets CTA</a>
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                         <div class="hotel_btn">
                             <a href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion"
                                 class="button_main">Buy
-                                Tickets CTA</a>
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
