--- a/tour.html
+++ b/tour.html
@@ -36,9 +36,7 @@
                         <li>
                             <a href="sport.html">Sports</a>
                         </li>
-                        <li>
-                            <a href="event.html">Events</a>
-                        </li>
+                        <li><a href="tour.html">Tour</a></li>
                     </ul>
                 </div>
                 <div class="open"><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -274,8 +272,10 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="blog_box">
-                        <a href="event.html"><h2>Understanding Macau’s Customs: A Guide to Local Etiquette
-                        </h2></a>
+                        <a href="event.html">
+                            <h2>Understanding Macau’s Customs: A Guide to Local Etiquette
+                            </h2>
+                        </a>
                         <p>Macau's customs and traditions offer valuable insights into the local way of life.
                             Understanding these practices can enhance your experience and ensure respectful
                             interactions with residents.
