--- a/exhibitions.html
+++ b/exhibitions.html
@@ -36,9 +36,7 @@
                         <li>
                             <a href="sport.html">Sports</a>
                         </li>
-                        <li>
-                            <a href="event.html">Events</a>
-                        </li>
+                        <li><a href="tour.html">Tour</a></li>
                     </ul>
                 </div>
                 <div class="open"><i class="fa fa-bars" aria-hidden="true"></i></div>
