--- a/exhibitions.html
+++ b/exhibitions.html
@@ -318,16 +318,18 @@
     <!-- about us section start -->
     <div class="blog_detail">
         <div class="container">
-           <div class="row mb-4 d-flex align-items-center">
+            <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="blog_img">
-                       <a href="event.html"><img src="img/celebration.avif" alt="macau"></a>
+                        <a href="event.html"><img src="img/celebration.avif" alt="macau"></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="blog_box">
-                        <a href="event.html"><h2>Macau’s Festivals and Celebrations: A Year-Round Guide
-                        </h2></a>
+                        <a href="event.html">
+                            <h2>Macau’s Festivals and Celebrations: A Year-Round Guide
+                            </h2>
+                        </a>
                         <p>Macau’s calendar is filled with colorful festivals and celebrations that reflect the city’s
                             rich
                             cultural heritage. From traditional Chinese festivals to modern international events,
@@ -468,7 +470,7 @@
     </div>
     <!-- below section end -->
     <!--footer start-->
-    <!-- <footer class="footer_section">
+    <footer class="footer_section">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -478,27 +480,36 @@
                 </div>
                 <div class="col-12">
                     <div class="footer_inner">
-                        <h3>RÝCHLE ODKAZY</h3>
+                        <h3>QUICK LINKS</h3>
                         <ul>
                             <li>
-                                <a href="hotel.html">
-                                    hotely</a>
+                                <a href="exhibitions.html">
+                                    Exhibitions</a>
                             </li>
                             <li>
-                                <a href="resorts.html">
-                                    Strediská</a>
+                                <a href="shows.html">
+                                    Shows</a>
                             </li>
                             <li>
-                                <a href="spa.html">Kúpele</a>
+                                <a href="hotel.html">Hotels</a>
                             </li>
                             <li>
-                                <a href="about.html">O nás</a>
+                                <a href="sport.html">Sports</a>
+                            </li>
+                            <li><a href="tour.html">Tour</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="footer_inner mt-3">
+                        <ul>
+                            <li>
+                                <a href="privacy.html">
+                                    Privacy Policy</a>
                             </li>
                             <li>
-                                <a href="privacy.html">Zásady ochrany osobných údajov</a>
-                            </li>
-                            <li>
-                                <a href="terms.html">Podmienky</a>
+                                <a href="terms.html">
+                                    Terms & Conditions</a>
                             </li>
                         </ul>
                     </div>
@@ -516,28 +527,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <p class="copyright">Copyright © 2024 <a href="#">Slovak</a>.</p>
+                <div class="col-12 copyright_sec">
+                    <p class="copyright">Copyright © 2024 <a href="index.html">ticketsmacau</a>.</p>
+                    <p>Contact us <a href="mailto:info@ticketsmacau.com">info@ticketsmacau.com</a></p>
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- footer end-->
-    <!-- cookies start -->
-    <!-- <div class="card cookie-alert show">
-        <div class="card-body p-5">
-
-            <p class="card-text">"Pozor! 🍪 Súbory cookie používame na zlepšenie zážitku z prehliadania našej
-                webovej stránky. Pokračovaním v používaní našej stránky vyjadrujete súhlas s
-                používaním súborov cookie v súlade s našimi zásadami ochrany osobných údajov.
-                Predvoľby súborov cookie môžete spravovať v nastaveniach prehliadača. Prajeme
-                príjemné prehliadanie !"</p>
-            <div class="btn-toolbar justify-content-end">
-                <a href="#" class="btn btn-primary accept-cookies">súhlasiť</a>
-            </div>
-        </div>
-    </div> -->
-    <!-- cookies end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="javascript/bootstrap.js"></script>
     <script src="javascript/slick.js"></script>
