--- a/tour.html
+++ b/tour.html
@@ -59,11 +59,11 @@
     </div>
     <!-- banner section end -->
     <!-- below section start -->
-    <div class="below_banner">
+    <div class="below_banner tour_beside">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="para_hotel">
+                    <div class="para_hotel tour_besi">
                         <h2>Macau’s Top Tours & Attractions</h2>
                         <p>Explore Macau with our curated selection of tours designed to showcase the city’s rich
                             heritage and unique attractions. From cultural journeys and historical site visits to scenic
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="para_hotel">
-                        <img src="img/asideimage.jpg" alt="Macau">
+                        <img src="img/touraside.jpg" alt="Macau">
                     </div>
                 </div>
             </div>
