--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
     <!-- about us section start -->
     <div class="blog_detail">
         <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2>blogpost</h2>
+                </div>
+            </div>
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="blog_img">
