--- a/event.html
+++ b/event.html
@@ -121,7 +121,9 @@
                             <li>
                                 <a href="sport.html">Sports</a>
                             </li>
-                            <li><a href="tour.html">Tour</a></li>
+                            <li>
+                                <a href="tour.html">Tour</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
