--- a/exhibitions.html
+++ b/exhibitions.html
@@ -382,9 +382,7 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                How can I purchase tickets for exhibitions?
-
-                            </a>
+                                How can I purchase tickets for exhibitions?</a>
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
@@ -433,9 +431,7 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
-                                How can I stay informed about new exhibitions and updates?
-
-                            </a>
+                                How can I stay informed about new exhibitions and updates?</a>
                         </h4>
                     </div>
                     <div id="collapsefive" class="panel-collapse collapse" role="tabpanel"
