--- a/exhibitions.html
+++ b/exhibitions.html
@@ -321,12 +321,12 @@
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="blog_img">
-                        <a href="event.html"><img src="img/celebration.avif" alt="macau"></a>
+                        <a href="blog2.html"><img src="img/celebration.avif" alt="macau"></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="blog_box">
-                        <a href="event.html">
+                        <a href="blog2.html">
                             <h2>Macau’s Festivals and Celebrations: A Year-Round Guide
                             </h2>
                         </a>
