--- a/index.html
+++ b/index.html
@@ -244,7 +244,10 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="text_wrapper eco_first">
+                    <h2>Blogpost</h2>
+                </div>
+                <div class="col-12">
+                    <div class="text_wrapper blog_first">
                         <a href="event.html">
                             <h2>Macau's Iconic Landmarks: Must-See Attractions
                             </h2>
