--- a/hotel.html
+++ b/hotel.html
@@ -264,41 +264,27 @@
         </div>
     </section>
     <!-- about us section start -->
-    <div class="blog_detail">
+    <section class="affordable">
         <div class="container">
-            <div class="row mb-4 d-flex align-items-center">
-                <div class="col-lg-6 col-md-12">
-                    <div class="blog_img">
-                        <a href="event.html"><img src="img/food.webp" alt="macau"></a>
-                    </div>
+            <div class="row">
+                <div class="col-12">
+                    <h2>Blogpost</h2>
                 </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="blog_box">
-                        <a href="event.html">
+                <div class="col-12">
+                    <div class="text_wrapper blog_four">
+                        <a href="blog3.html">
                             <h2>A Culinary Tour of Macau
                             </h2>
                         </a>
-                        <p>Macau’s culinary scene is a tantalizing blend of flavors from both its Chinese and
-                            Portuguese heritage. A journey through its food offerings reveals a rich tapestry of unique
-                            and delicious dishes.</p>
-                        <p>Begin with traditional Macanese dishes such as Minchi, a savory minced meat dish, and
-                            African chicken, known for its spicy and aromatic flavors. Don't miss the famous Portuguese
-                            egg tarts, a sweet treat with a creamy custard filling encased in a flaky pastry.
-                        </p>
-                        <p>Macau’s street food scene is equally exciting, with offerings like pork chop buns and almond
-                            cakes available from local vendors. For a fine dining experience, explore restaurants that
-                            serve authentic Portuguese cuisine or fusion dishes that blend traditional Macanese and
-                            Portuguese flavors.</p>
-                        <p>Macau’s food scene is a culinary adventure that reflects the city’s diverse cultural
-                            influences.
-                            From street food to gourmet dining, the city offers a wide array of gastronomic delights
-                            that
-                            are sure to satisfy any palate.</p>
+                        <span><a href="blog3.html">View
+                                More</a></span>
                     </div>
                 </div>
+
             </div>
+
         </div>
-    </div>
+    </section>
     <!-- about us section end -->
     <!-- accordian section start -->
     <div class="hotel_accordian">
