--- a/sport.html
+++ b/sport.html
@@ -263,45 +263,27 @@
         </div>
     </section>
     <!-- about us section start -->
-    <div class="blog_detail">
+    <section class="affordable">
         <div class="container">
-            <div class="row mb-4 d-flex align-items-center">
-                <div class="col-lg-6 col-md-12">
-                    <div class="blog_img">
-                        <a href="event.html"><img src="img/tradition.jpg" alt="macau"></a>
-                    </div>
+            <div class="row">
+                <div class="col-12">
+                    <h2>Blogpost</h2>
                 </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="blog_box">
-                        <a href="event.html">
+                <div class="col-12">
+                    <div class="text_wrapper blog_five">
+                        <a href="blog5.html">
                             <h2>The Cultural Tapestry of Macau: A Fusion of Traditions
                             </h2>
                         </a>
-                        <p>Macau is a vibrant cultural mosaic where traditional Chinese practices merge seamlessly
-                            with Portuguese influences. This fusion creates a unique cultural landscape that is
-                            celebrated through festivals, cuisine, and art.
-                        </p>
-                        <p>One of Macau’s most famous cultural events is the Macau Grand Prix, a thrilling motorsport
-                            event that attracts racing enthusiasts from around the world. Another highlight is the
-                            Chinese
-                            New Year celebrations, where traditional lion dances, fireworks, and parades bring the
-                            streets to life.
-
-                        </p>
-                        <p>The city’s culinary scene is a reflection of its cultural blend, with dishes like Macanese
-                            curry
-                            and Portuguese egg tarts. Traditional Chinese festivals, such as the Dragon Boat Festival,
-                            are celebrated with enthusiasm, showcasing Macau’s deep-rooted cultural practices.</p>
-                        <p>Macau’s culture is a rich blend of influences that offers a fascinating experience for
-                            visitors.
-                            From its vibrant festivals to its unique culinary offerings, the city’s cultural tapestry is
-                            both
-                            diverse and captivating.</p>
+                        <span><a href="blog5.html">View
+                                More</a></span>
                     </div>
                 </div>
+
             </div>
+
         </div>
-    </div>
+    </section>
     <!-- about us section end -->
     <!-- accordian section start -->
     <div class="hotel_accordian">
