--- a/tour.html
+++ b/tour.html
@@ -262,43 +262,27 @@
         </div>
     </section>
     <!-- about us section start -->
-    <div class="blog_detail">
+    <section class="affordable">
         <div class="container">
-            <div class="row mb-4 d-flex align-items-center">
-                <div class="col-lg-6 col-md-12">
-                    <div class="blog_img">
-                        <a href="event.html"><img src="img/local.jpg" alt="macau"></a>
-                    </div>
+            <div class="row">
+                <div class="col-12">
+                    <h2>Blogpost</h2>
                 </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="blog_box">
-                        <a href="event.html">
+                <div class="col-12">
+                    <div class="text_wrapper blog_six">
+                        <a href="blog6.html">
                             <h2>Understanding Macau’s Customs: A Guide to Local Etiquette
                             </h2>
                         </a>
-                        <p>Macau's customs and traditions offer valuable insights into the local way of life.
-                            Understanding these practices can enhance your experience and ensure respectful
-                            interactions with residents.
-                        </p>
-                        <p>When visiting Macau, it’s important to be mindful of local etiquette. For example, it is
-                            customary to greet with a friendly nod or smile rather than a handshake, especially in more
-                            traditional settings. In temples and religious sites, dress modestly and remove your hat
-                            before entering.
-                        </p>
-                        <p>Dining customs also play a significant role in Macau’s culture. It’s polite to wait for the
-                            host to
-                            start the meal and to use chopsticks correctly. When visiting a casino or attending a formal
-                            event, dress appropriately and adhere to the established dress codes.</p>
-                        <p>Respecting Macau’s customs and etiquette helps foster positive interactions and enriches
-                            your visit. By understanding and embracing local practices, you can fully appreciate the
-                            city’s
-                            culture and traditions.
-                        </p>
+                        <span><a href="blog6.html">View
+                                More</a></span>
                     </div>
                 </div>
+
             </div>
+
         </div>
-    </div>
+    </section>
     <!-- about us section end -->
     <!-- accordian section start -->
     <div class="hotel_accordian">
