--- a/index.html
+++ b/index.html
@@ -349,19 +349,19 @@
     </footer>
     <!-- footer end-->
     <!-- cookies start -->
-    <!-- <div class="card cookie-alert show">
+    <div class="card cookie-alert show">
         <div class="card-body p-5">
 
-            <p class="card-text">"Pozor! 🍪 Súbory cookie používame na zlepšenie zážitku z prehliadania našej
-                webovej stránky. Pokračovaním v používaní našej stránky vyjadrujete súhlas s
-                používaním súborov cookie v súlade s našimi zásadami ochrany osobných údajov.
-                Predvoľby súborov cookie môžete spravovať v nastaveniach prehliadača. Prajeme
-                príjemné prehliadanie !"</p>
+            <p class="card-text">We use cookies to enhance your browsing experience and provide personalized content. By
+                continuing to browse the site, you agree to our use of cookies. For more information, please
+                read our Privacy Policy.
+            </p>
             <div class="btn-toolbar justify-content-end">
-                <a href="#" class="btn btn-primary accept-cookies">súhlasiť</a>
+                <a href="#" class="btn btn-primary accept-cookies">Accept Cookies</a>
+                <a href="#" class="btn btn-primary reject-cookies">Reject Cookies</a>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- cookies end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="javascript/bootstrap.js"></script>
