--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="flex_box Shows">
-                        <div class="flex_cont"><a href="">
+                        <div class="flex_cont"><a href="shows.html">
                                 <h3>Shows
                                 </h3>
                             </a>
@@ -101,7 +101,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="flex_box Exhi">
                         <div class="flex_cont">
-                            <a href="">
+                            <a href="exhibitions.html">
                                 <h3>Exhibitions</h3>
                             </a>
                         </div>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="flex_box Hotel">
-                        <div class="flex_cont"><a href="">
+                        <div class="flex_cont"><a href="hotel.html">
                                 <h3>Hotels</h3>
                             </a>
                         </div>
@@ -118,7 +118,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="flex_box Sport">
                         <div class="flex_cont">
-                            <a href="">
+                            <a href="sport.html">
                                 <h3>Sports</h3>
                             </a>
                         </div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="flex_box Tour">
-                        <div class="flex_cont"><a href="">
+                        <div class="flex_cont"><a href="tour.html">
                                 <h3>Tours</h3>
                             </a>
                         </div>
