--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="col-lg-7 text">
                         <h3>Experience The Thrill Of The Race</h3>
-                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Macau Grand Prix</span></a>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" target="_blank"><span>Macau Grand Prix</span></a>
                         <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
                             The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
                             entertainment.
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col-lg-7 text">
                         <h3>Explore The Magic Of China</h3>
-                        <a href="https://www.china-roads.com/travel/macao/village-taipa/"><span>Taipa Village</span></a>
+                        <a href="https://www.china-roads.com/travel/macao/village-taipa/" target="_blank"><span>Taipa Village</span></a>
                         <p>A cultural and historical area
                             with traditional Portuguese
                             architecture, local shops,
@@ -180,7 +180,7 @@
                     <div class="col-lg-7 text">
                         <h3>Marvel At The Wonder Of Art</h3>
                         <a
-                            href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"><span>“Legends
+                            href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition" target="_blank"><span>“Legends
                                 of Chivalry” Art
                                 Exhibition</span></a>
                         <p>MGM joins forces with
